--- a/test/pom.xml
+++ b/test/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>robot</artifactId>
         <groupId>com.qastuff</groupId>
+        <artifactId>robot</artifactId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.xyz</groupId>
+    <groupId>com.qastuff</groupId>
     <artifactId>test</artifactId>
     <version>1.0</version>
 
@@ -23,7 +23,7 @@
     </dependencies>
 
     <build>
-        <sourceDirectory>testScripts</sourceDirectory>
+        <sourceDirectory>src/testScripts</sourceDirectory>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -40,7 +40,7 @@
                 <version>2.20.1</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>tetestng.xml</suiteXmlFile>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
