Sorted Extent Reports

--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -33,9 +33,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.relevantcodes</groupId>
+            <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
-            <version>2.40.2</version>
+            <version>3.1.2</version>
         </dependency>
 
         <dependency>
