--- a/framework/src/resources/automation.properties
+++ b/framework/src/resources/automation.properties
@@ -1,5 +1,5 @@
 # APPLICATION PROPOERTIES
-app.url                 =   https://www.paytmmall.com
+app.url                 =   https://www.amazon.in/
 
 # BROWSER
 browser.name            =   chrome
